fix: marker animal-info text color on dark mode

--- a/src/components/map/map.sass
+++ b/src/components/map/map.sass
@@ -79,12 +79,12 @@
       gap: 5px
       color: var(--color-text-primary)
       & .animal-info__name
-        color: var(--color-text-section-header)
+        color: var(--section-color-title)
         font-size: 18px;
         line-height: 21px;
         font-weight: bold
       & .accented
-        color: var(--color-text-section-header)
+        color: var(--section-color-title)
         font-weight: 500
         padding-right: 5px
   &:hover .marker__animal-info
